--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ highlighter: pygments
 title: Aitter
 description: 人生到处知何似，应似飞鸿踏雪泥
 theme: modernist
-disqusname: git-lt
+disqusname: gitlt
 
 # theme can be: hack, leap-day, merlot, midnight, minimal, modernist, slate, time-machine, kunka
 # those themes are all come from GitHub Pages Themes
